--- a/index.html
+++ b/index.html
@@ -11,76 +11,7 @@
                         <title>MCDONALDS MENU</title>
     
 <style>
-    /* Desktop View */
-    /* @media all and (max-width: 960px){
-    .main-wrapper{
-        width:100%;
-        text-align: center;
-    }
-    .main-container{
-        width:100%;
-        text-align: center;
-    }
-    .disclaimer{
-        display: left;
-    } */
-}
-    /* Tablet View */
-    /* @media all and (min-width: 768px) and (max-width: 959px){
-    .main-wrapper{
-        width:100%;
-        text-align: center;
-    }
-    .main-container{
-        width:100%;
-        text-align: center;
-    }
-    .disclaimer{
-        display: left;
-    }     */
-}
-    /* Smartphone View */
-    /* @media all and (max-width: 767px){
-    #main-wrapper{
-        width:100%;
-        text-align: center;
-    }
-    .main-container{
-        width:100%;
-        text-align: center;
-    }
-    .disclaimer{
-        display: none;
-    }
-    .six-offers{
-        color:#292929;
-        padding:15px 15px;
-        margin:10px 10px;
-    }
-    #main-content .row1to6-grid{
-        display:grid;
-        grid-template-columns:1fr 1fr;
-        grid-template-rows:450px 450px 700;
-        grid-gap:10px;
-    }
-    .six-social-media-icons{
-        width:100%;
-        text-align: center;
-    }
-    .six-footer-icon-links{
-        width:100%;
-        text-align: center;
-    }
-    .footer .top-footer-menu{
-        width:100%;
-    }
-    .footer .top-footer-menu six-footer-menus{
-        width:100%;
-    }
-    .main-footer-section .main-footer-menu{
-        width:100%;
-    } */
-}
+
 </style>
 </head>
 
@@ -222,20 +153,11 @@
 <!-- begin placeholder for photo gallery slider -->
 <div class="photo-gallery" style="margin:0px; padding:0px; text-align:center; 
 transition:all .4s ease-in-out;">
-
 <!-- .fade { opacity: 1; transition: opacity .25s ease-in-out;} -->
-
-    <!-- <img id="slideshow" width="300" height="300"  -->
-
     <img id="slideshow" width="" height="400" 
     alt="images of mcdonald's menu items"/>
-    <!-- <img name="slide" src="public/img/image2.jpg"  -->
 </div>
 <!-- end placeholder for photo gallery slider -->
-
-
-
-
 <!-- begin the main-content section -->
 <main id="main-content" style="margin-bottom:100px;">
     <section class="row1to6-grid">
@@ -272,7 +194,6 @@ transition:all .4s ease-in-out;">
     <!-- </section> -->
 <!-- end row1-3columns-six-offers section -->
 <!-- begin row2-3columns-six-offers section -->
-<!-- <section class="row2-3columns">         -->
     <div class="six-offers">               
         <img class="img-row2" src="public/img/homepg_StillLife_Bike_3col_376x252.jpg">
         <h2 class="h2header">McCafé® in Stores</h2>
@@ -305,12 +226,7 @@ transition:all .4s ease-in-out;">
         </div>
     </div>
 </section>
-<!-- end row2-3columns-six-offers section -->    
-
-
-
-
-
+<!-- end row2-3columns-six-offers section -->
 <!-- Begin social-media-icons-section and googleplay-apple-apps-download section -->
 <section class="six-social-media-icons" style="padding-left:450px; margin-top:50px;">
     <!-- Begin 6-social-media-icons section -->    
@@ -335,8 +251,7 @@ transition:all .4s ease-in-out;">
         </a></li>
     </ul>
 </section>                   
-<!-- end 6-social-media-icons section --> 
-   
+<!-- end 6-social-media-icons section -->   
 <!-- Begin googleplay-apple-download section -->
 <section>
 <div class="googleplay-apple-apps" style="margin-top:20px; padding-left:410px;">
@@ -356,7 +271,6 @@ transition:all .4s ease-in-out;">
 <!-- end social-media-icons-section and googleplay-apple-apps-download section  -->
 </main>
 <!-- end the main-content section -->
-
 <!-- begin footer section -->
 <footer>
     <section class="top-footer-menu">    
@@ -429,9 +343,8 @@ transition:all .4s ease-in-out;">
         </div>
     </section>
 </footer>
-<!-- end footer section -->
-  
-<!-- javascript function to run the slideshow on page load -->
+<!-- end footer section -->  
+<!-- begin javascript function to run the slideshow on page load -->
 <script type="text/javascript">
         var i = 0;
         function change_image(){
@@ -442,5 +355,7 @@ transition:all .4s ease-in-out;">
             setInterval(change_image, 3000);
         }    
 </script>
+<!-- end javascript function to run the slideshow on page load -->
+
 </body>
 </html>
