--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ transition:all .4s ease-in-out;">
 </section>                   
 <!-- end 6-social-media-icons section -->   
 <!-- Begin googleplay-apple-download section -->
-<section>
+<section class="two-download-icons">
 <div class="googleplay-apple-apps" style="margin-top:20px; padding-left:410px;">
     <a href="https://play.google.com/store/apps/details?id=com.mcdonalds.app&hl=en">
         <img src="/public/img/badge-googleplay.png" 
