--- a/index.html
+++ b/index.html
@@ -225,9 +225,11 @@ transition:all .4s ease-in-out;">
 </section>
 <!-- end row2-3columns-six-offers section -->
 <!-- Begin social-media-icons-section and googleplay-apple-apps-download section -->
-<section class="six-social-media-icons" style="padding-left:450px; margin-top:50px;">
+
+
+<section class="six-social-media-icons" style="padding-left:150px; margin-top:50px;">
     <!-- Begin 6-social-media-icons section -->    
-    <ul class="6-social-media-icons" 
+    <ul class="six-social-media-icons" 
     style="display:flex; flex-direction:row; 
     text-align:center;">
         <li class="six-footer-icon-links" style="padding:10px 10px;"><a href="http://facebook.com/McDonaldsUS" target="_blank">
