--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@ transition:all .4s ease-in-out;">
 <!-- Begin social-media-icons-section and googleplay-apple-apps-download section -->
 
 
-<section class="six-social-media-icons" style="padding-left:150px; margin-top:50px;">
+<section class="six-social-media-icons" style="">
     <!-- Begin 6-social-media-icons section -->    
-    <ul class="six-social-media-icons" 
+    <ul class="" 
     style="display:flex; flex-direction:row; 
     text-align:center;">
         <li class="six-footer-icon-links" style="padding:10px 10px;"><a href="http://facebook.com/McDonaldsUS" target="_blank">
@@ -253,7 +253,7 @@ transition:all .4s ease-in-out;">
 <!-- end 6-social-media-icons section -->   
 <!-- Begin googleplay-apple-download section -->
 <section class="two-download-icons">
-<div class="googleplay-apple-apps" style="margin-top:20px; padding-left:410px;">
+<div class="googleplay-apple-apps" style="">
     <a href="https://play.google.com/store/apps/details?id=com.mcdonalds.app&hl=en">
         <img src="/public/img/badge-googleplay.png" 
         width="161" height="56" alt="googleplay-download" 
