--- a/index.html
+++ b/index.html
@@ -227,11 +227,10 @@ transition:all .4s ease-in-out;">
 <!-- Begin social-media-icons-section and googleplay-apple-apps-download section -->
 
 
-<section class="six-social-media-icons" style="">
-    <!-- Begin 6-social-media-icons section -->    
-    <ul class="" 
-    style="display:flex; flex-direction:row; 
-    text-align:center;">
+<section class="six-social-media-icons">
+    <!-- Begin 6-social-media-icons section -->
+    
+    <ul class="six-footer-icon-links">
         <li class="six-footer-icon-links" style="padding:10px 10px;"><a href="http://facebook.com/McDonaldsUS" target="_blank">
             <img src="public/img/icons-black-no-bg-facebook.png" 
             width="40" height="40" alt="facebook-icon"/>
