--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" 
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" 
     crossorigin="anonymous">
-    <link rel="stylesheet" href="./public/css/main.css">   
-     
+    <link rel="stylesheet" href="./public/css/main.css">     
                         <title>MCDONALDS MENU</title>
-
 </head>
 
 
@@ -155,8 +153,9 @@ transition:all .4s ease-in-out;">
     alt="images of mcdonald's menu items"/>
 </div>
 <!-- end placeholder for photo gallery slider -->
+
 <!-- begin the main-content section -->
-<main id="main-content" style="margin-bottom:100px;">
+<main id="main-content">
     <section class="row1to6-grid">
     <!-- <section class="row1-3columns"> -->
         <!-- begin row1-3columns-six-offers section -->
@@ -225,13 +224,11 @@ transition:all .4s ease-in-out;">
 </section>
 <!-- end row2-3columns-six-offers section -->
 <!-- Begin social-media-icons-section and googleplay-apple-apps-download section -->
-
-
 <section class="six-social-media-icons">
     <!-- Begin 6-social-media-icons section -->
     
     <ul class="six-footer-icon-links">
-        <li class="six-footer-icon-links" style="padding:10px 10px;"><a href="http://facebook.com/McDonaldsUS" target="_blank">
+        <li class="six-footer-icon-links"><a href="http://facebook.com/McDonaldsUS" target="_blank">
             <img src="public/img/icons-black-no-bg-facebook.png" 
             width="40" height="40" alt="facebook-icon"/>
         </a></li>
@@ -252,16 +249,14 @@ transition:all .4s ease-in-out;">
 <!-- end 6-social-media-icons section -->   
 <!-- Begin googleplay-apple-download section -->
 <section class="two-download-icons">
-<div class="googleplay-apple-apps" style="">
+<div class="googleplay-apple-apps">
     <a href="https://play.google.com/store/apps/details?id=com.mcdonalds.app&hl=en">
         <img src="/public/img/badge-googleplay.png" 
-        width="161" height="56" alt="googleplay-download" 
-        style="text-align:center;"/>
+        width="161" height="56" alt="googleplay-download"/>
     </a>        
     <a href="https://apps.apple.com/us/app/mcdonalds/id922103212">
         <img src="/public/img/badge-appleappstore.png" 
-        width="156" height="51" alt="appleplay-download" 
-        style="text-align:center;"/>
+        width="161" height="56" alt="appleplay-download"/>
     </a>
 </div>
 <!-- end googleplay-apple-download section -->
@@ -269,11 +264,12 @@ transition:all .4s ease-in-out;">
 <!-- end social-media-icons-section and googleplay-apple-apps-download section  -->
 </main>
 <!-- end the main-content section -->
+
 <!-- begin footer section -->
 <footer>
     <section class="top-footer-menu">    
         <ul class="six-footer-menus">
-            <li style="color:#292929; font-family:Arial, Helvetica, sans-serif;">
+            <li>
                 About Us
             </li>
             <li>Our History</li>
@@ -286,7 +282,7 @@ transition:all .4s ease-in-out;">
             <li>Digital Accessibility</li>
         </ul>
         <ul class="six-footer-menus">
-            <li style="color:#292929; font-family:Arial, Helvetica, sans-serif;">
+            <li>
                 Careers
             </li>
             <li>Education Opportunity</li>
@@ -296,7 +292,7 @@ transition:all .4s ease-in-out;">
             <li>Apply Now</li>
         </ul>
         <ul class="six-footer-menus">
-            <li style="color:#292929; font-family:Arial, Helvetica, sans-serif;">
+            <li>
                 Services
             </li>
             <li>Wi-Fi</li>
@@ -306,7 +302,7 @@ transition:all .4s ease-in-out;">
             <li>Mobile Order and Pay</li>
         </ul>
         <ul class="six-footer-menus">
-            <li style="color:#292929; font-family:Arial, Helvetica, sans-serif;">
+            <li>
                 Community
             </li>
             <li>RMHC</li>
@@ -314,30 +310,30 @@ transition:all .4s ease-in-out;">
             <li>Black and Positively Golden</li>
         </ul>
         <ul class="six-footer-menus">
-            <li style="color:#292929; font-family:Arial, Helvetica, sans-serif;">
+            <li>
                 Contact Us
             </li>
             <li>Arch Card</li>
             <li>Donations</li>
             <li>Employment</li>
             <li>Mobile App</li>
-            <li>Restaurant Feedback</li>
+            <li>Restaurant <br/>Feedback</li>
         </ul>
     </section>
 <hr/>
     <section class="main-footer-section">
-        <ul class="main-footer-menu" style="width:100%;">
+        <ul class="main-footer-menu">
             <a href="https://www.mcdonalds.com/us/en-us/contact-us.html"><li>Contact Us</li></a>
             <a href="https://www.mcdonalds.com/us/en-us/privacy.html"><li>Privacy(Updated)</li></a>
             <a href="https://www.mcdonalds.com/us/en-us/terms-and-conditions.html"><li>Terms and Conditions</li></a>
             <a href="https://www.mcdonalds.com/us/en-us/accessibility.html"><li>Accessibility</li></a>
         </ul>
-        <div class="copyright" style="width:100%;">
+        <div class="copyright">
             <a href="https://mcdonalds-menu.netlify.com/">        
                 <img class="img-logo" src="./public/img/homepg-logo_48x48.png" 
-                alt="mcdonalds-logo" style="margin-left:220px;" />
+                alt="mcdonalds-logo"/>
             </a>
-            <p>© 2017 - 2019 McDonald's. All Rights Reserved</p>
+            <p>© 2017 - 2019 McDonald's All Rights Reserved</p>
         </div>
     </section>
 </footer>
