edits and updates.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </li> -->
             <li>
                 <a role="search" href="https://www.mcdonalds.com/us/en-us/restaurant-locator.html">
-                Locations
+                Find locations
                 </a>
             </li>
             <!-- <li>
