--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
     </td>
 </tr>
 <!-- end disclaimer section -->
-<hr/>
+<!-- <hr/> -->
 <!-- begin header navigation for the top-menu-1, top-menu-2, and the main-menu sections -->
 <header tabindex="0" role="banner" class="header">
 <!-- add mcdonald's golden arches logo -->
     <nav id="main-nav-wrapper" class="top-img-logo">
         <section role="logo">
             <a href="https://mcdonalds-menu.netlify.com/">                
-                <img src="public/img/homepg-logo_108x108.jpg.png" />
+                <img src="public/img/homepg-logo_108x108.jpg.png"/>
             </a>
         </section>
         <!-- begin top-menu-1 section -->
@@ -120,12 +120,13 @@
         aria-label="top-right-menu" 
         class="top-menu-2">
             <li>
-                <i class="fas fa-search"></i>
+                <i class="fas fa-search" 
+                style="margin-right: 20px;"></i>
             </li>
             <li>
                 <a role="search" 
-                href="https://www.mcdonalds.com/us/en-us/search-results.html">
-                Search
+                href="https://www.mcdonalds.com/us/en-us/restaurant-locator.html" style="margin-left:-70px;">
+                Locations
                 </a>
             </li>
         </ul>
