--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
             <br/>html5, css3, javascript, mobile responsive, npm, webpack, web accessibility, NVDA,
                   <a tabindex="-1" align="center" href="https://github.com/jerome-wilson-developer/landingpg_mcdonalds-menu" target="_blank">
                     GITHUB
-                  </a>, lighthouse audit, 
-                  <a tabindex="-1" href="https://mcdonalds-menu.netlify.com/" target="_blank">
-                    NETLIFY</a>.
+                  </a>, <a tabindex="-1" href="https://mcdonalds-menu.netlify.com/" target="_blank">
+                    NETLIFY</a>, chrome lighthouse audits, <a tabindex="-1" href="https://jerome-wilson-web-dev.com/">Resume-Portfolio-Blog</a>
         <hr/>
         <a align="center" style="padding:5px 3px 5px 5px;">
           <img src="/public/img/icon-html5-png-128x128.png" 
@@ -93,7 +92,9 @@
     </td>
 </tr>
 <!-- end disclaimer section -->
+
 <!-- <hr/> -->
+
 <!-- begin header navigation for the top-menu-1, top-menu-2, and the main-menu sections -->
 <header tabindex="0" role="banner" class="header">
 <!-- add mcdonald's golden arches logo -->
