--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <tr>
     <td>
   <table tabindex="-1" class="disclaimer" width="100%" align="center" border="0" 
-  cellspacing="0" cellpadding="0" style="background-color:gold; 
+  cellspacing="0" cellpadding="0" style="background-color:; 
   text-align:left; margin:0; padding:0;">
   <tr>
       <td style="width:30%; text-align:left; 
